extends Node2D

class_name PlayerAudio

onready var jump_audio = $JumpAudio
onready var brake_audio = $BrakeAudio
onready var spin_audio = $SpinAudio
onready var spindashcharge = $SpinDashCharge
onready var spindashrelease = $SpinDashRelease
onready var peeloutcharge = $PeeloutCharge
onready var peeloutrelease = $PeeloutRelease
